--- a/src/config.json
+++ b/src/config.json
@@ -13,6 +13,7 @@
                 "super_scale": 1,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -63,6 +64,7 @@
                 "super_scale": 1,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -105,6 +107,7 @@
                 "super_scale": 1,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -147,6 +150,7 @@
                 "super_scale": 2,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -189,6 +193,7 @@
                 "super_scale": 1,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -231,6 +236,7 @@
                 "strategy": "lesion_slices",
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -275,6 +281,7 @@
                 "super_scale": 1,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -319,6 +326,7 @@
                 "super_scale": 2,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -363,6 +371,7 @@
                 "super_scale": 1,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -407,6 +416,7 @@
                 "super_scale": 2,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -450,6 +460,8 @@
         "super_scale": 1,
         "kfold": {
           "enable": true,
+                    "final_retrain": false,
+          "final_retrain": false,
           "n_splits": 5,
           "seed": 42,
           "mini_val_frac": 0.10,
@@ -500,6 +512,7 @@
         "super_scale": 2,
         "kfold": {
           "enable": true,
+                    "final_retrain": false,
           "n_splits": 5,
           "seed": 42,
           "mini_val_frac": 0.10,
@@ -550,6 +563,7 @@
                 "super_scale": 1,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -592,6 +606,7 @@
                 "super_scale": 2,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -634,6 +649,7 @@
                 "super_scale": 2,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
@@ -684,6 +700,7 @@
                 "super_scale": 2,
                 "kfold": {
                     "enable": true,
+                    "final_retrain": false,
                     "n_splits": 5,
                     "seed": 42,
                     "mini_val_frac": 0.10,
